apps/networking/tailscale/golink/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: golinks-lan
  labels:
    app: golinks
  annotations:
    kube-vip.io/vipHost: golinks
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: golinks
  type: LoadBalancer
  loadBalancerIP: "192.168.1.140"
  loadBalancerClass: kube-vip.io/kube-vip-class
---
apiVersion: v1
kind: Service
metadata:
  name: golinks-internal
  labels:
    app: golinks
spec:
  selector:
    app: golinks
  ports:
    - name: web
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: golinks-ts
  labels:
    app: golinks
    external-dns.alpha.kubernetes.io/hostname: links.gruber.dev.br
    external-dns.alpha.kubernetes.io/ttl: "600"
    tailscale.com/hostname: "go"
spec:
  selector:
    app: golinks
  ports:
    - name: web
      port: 80
      targetPort: 8080
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
