apps/networking/tailscale/golink/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golinks-ts
  annotations:
    external-dns.alpha.kubernetes.io/hostname: links.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: links.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golinks-ts
            port:
              name: web
  tls:
  - hosts:
    - links.gruber.dev.br
    secretName: golinks-tls
